added foccus features
